--- a/Client/src/components/AdminPage.module.css
+++ b/Client/src/components/AdminPage.module.css
@@ -100,11 +100,13 @@ html, body {
 
 /* Modal styling */
 .modal {
-    position: fixed;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    /*width: 100%;*/
+    /*height: 100%;*/
     background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -114,6 +116,8 @@ html, body {
 /* Modal content box */
 .modalContent {
     background: white;
+    display: block;
+    margin-bottom: 10px;
     padding: 20px;
     border-radius: 5px;
     width: 90%; /* Responsive modal width */
@@ -123,6 +127,12 @@ html, body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     position: relative;
 }
+.modalContent label {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Adds space between the checkbox and the text */
+    margin-bottom: 10px; /* Adds space below the checkbox text */
+} 
 
 /* Close button inside modal */
 .closeButton {
