--- a/Client/src/components/Navbar.module.css
+++ b/Client/src/components/Navbar.module.css
@@ -109,3 +109,9 @@
     border: 1px solid #ccc;
     border-radius: 3px;
 }
+
+.Balance {
+    font-size: 16px;
+    font-weight: bold;
+    margin-right: 10px;
+}
