--- a/Client/src/Pages/LoginPage.module.css
+++ b/Client/src/Pages/LoginPage.module.css
@@ -43,7 +43,7 @@ input {
     border-radius: 5px;
 }
 
-button {
+.logInButton {
     padding: 0.8rem;
     font-size: 1rem;
     background-color: rgb(164, 1, 1);
@@ -53,6 +53,6 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.logInButton:hover {
     background-color: rgb(112, 1, 1);
 }
