--- a/Client/src/Pages/ChangePasswordPage.module.css
+++ b/Client/src/Pages/ChangePasswordPage.module.css
@@ -38,11 +38,11 @@ input {
 button {
     padding: 10px;
     font-size: 16px;
-    color: #fff;
-    background-color: #007bff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    background-color: rgb(164, 1, 1);
+    color: white;
 }
 
 button:disabled {
