--- a/Client/src/App.module.css
+++ b/Client/src/App.module.css
@@ -2,7 +2,7 @@
   position: relative;
   height: 100vh;
   width: 100vw;
-  overflow-y: auto; /* Enables scrolling for the main app container */
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -62,7 +62,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
-  background-color: #333; /* Adjust as needed */
+  background-color: #333;
   color: white;
 }
 
